# oag-agent

./: README.md  agent.py  analytics.py  api.py  cli.py  context.py  events.py  executor.py  harness.py  hooks.py  orchestrator.py  pipeline_types.py  planner.py  pyproject.toml  registry.py  reviewer.py  rules.py  schema.py  worker.py
oag/: __init__.py  agent.py  confirmation_flow.py  context.py  data_executor.py  events.py  harness.py  hooks.py  ontology_runtime.py  query_loop.py  retry.py  rules.py  runtime.py  runtime_tools.py  schema.py  session_store.py  tool_executor.py  tool_pipeline.py  tool_registry.py  worker.py
oag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
oag/distiller/: __init__.py  reviewer.py
oag/llm/: __init__.py  context.py  context_usage.py  retry.py
oag/loop/: __init__.py  confirmation_flow.py  query_loop.py  tool_executor.py  worker.py
oag/ontology/: __init__.py  data_executor.py  inspector.py  loader.py  prompt_builder.py  registry.py  repository.py  rules.py  runtime.py  schema.py  store.py  tool_registration.py  validators.py  workflow_runtime.py
oag/ontology/adapters/: __init__.py  json_file.py  sqlite_table.py
oag/runtime/: __init__.py  components.py  config.py  events.py  hooks.py  message_sanitizer.py  session_store.py  state.py  stop_check.py  tool_result_store.py  trace.py
oag/tools/: __init__.py  mcp_remote.py  pipeline.py  provider.py  registry.py  runtime_tools.py
oag_distiller/: pipeline.py  prompts.py
tests/: test_agent_runtime.py  test_harness_runtime.py  test_mcp_harness.py
