[project]
name = "oag"
version = "0.1.0"
description = "OAG — Ontology Augmented Generation agent engine"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "openai>=1.0",
    "pandas>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["oag*", "oag_distiller*"]
